--- a/simpleweb.html
+++ b/simpleweb.html
@@ -1,12 +1,14 @@
-  
+<style>
+    body {
+        background-color:#0000;
+    }
+    p {
+         color:#FC0000;
+    }
+</style>  
 <head>
     <title>Simple Webpage</title>
 </head>
 <body>
-    <h1>This is a simple webpage created by BlackKitten.</h1>
+    <h1><p>This is a simple webpage created by BlackKitten.</p></h1>
 </body>
-<style>
-    body {
-        background-color:#00000;
-    }
-</style>
