--- a/simpleweb.html
+++ b/simpleweb.html
@@ -3,12 +3,13 @@
         background-color:#0000;
     }
     p {
-         color:#FC0000;
+         color:#0045FC;
+         text-align: center;
     }
 </style>  
 <head>
     <title>Simple Webpage</title>
 </head>
 <body>
-    <h1><p>This is a simple webpage created by BlackKitten.</p></h1>
+    <h1><p>This is a simple website made by blackkitten.</p></h1>
 </body>
