--- a/simpleweb.html
+++ b/simpleweb.html
@@ -1,15 +1,15 @@
 <head>
+<title>Simple Webpage</title>
 <style>
     body {
         background-color:#0000;
     }
-    p {
+    h1 {
          color:#0045FC;
          text-align: center;
     }
 </style>
-    <title>Simple Webpage</title>
 </head>
 <body>
-    <h1><p>This is a simple website made by blackkitten.</p></h1>
+    <h1>This is a simple website made by blackkitten.</h1>
 </body>
